Fix issue with toolbox background color

KoToolBox::changeEvent() overrode QWidget::changeEvent()'s
handling of the EnabledChange event, resulting in
the enabled state and color not changing.

Also corrects KisPresetLivePreviewView and KisHighlightedToolButton.

BUG:461126

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1760>