libs/ui/toolbox/KoToolBox.cpp
@@ -283,6 +283,7 @@ void KoToolBox::paintEvent(QPaintEvent *)
 
 void KoToolBox::changeEvent(QEvent *event)
 {
+    QWidget::changeEvent(event);
     if (event->type() == QEvent::PaletteChange) {
         for (QToolButton *button : d->buttons) {
             KoToolBoxButton* toolBoxButton = qobject_cast<KoToolBoxButton*>(button);
